--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,16 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: Apache Software License",
 ]
+
 dependencies = [
-    "sentencepiece==0.2.0", "shortuuid",
+    "sentencepiece==0.2.0", "shortuuid==1.0.13",
     "accelerate==0.21.0", "peft==0.4.0", "bitsandbytes==0.41.0",
     "pydantic<2,>=1", "markdown2[all]", "numpy==1.26.0", "scikit-learn==1.2.2",
     "gradio==3.35.2", "gradio_client==0.2.9",
-    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
-    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13", "nltk", 
+    "requests==2.32.3", "httpx==0.24.0", "uvicorn==0.34.0", "fastapi==0.115.8",
+    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13", "nltk==3.9.1",
+    "jupyter==1.1.1", "notebook==7.0.8", "jupyterlab==4.0.13",
+     "matplotlib==3.10.0", "opencv-python==4.11.0.86"
 ]
 
 [project.optional-dependencies]
